# SLART

./: .gitignore  Global.pri  Makefile  README  README.md  TODO  configure  package.sh  pkgconfig.sh
src/: CMakeLists.txt  buildconfig.pri  config.pri  gio-2.0.pri  lua-5.1.pri  src.pro
src/apps/: CMakeLists.txt  apps.pro
src/apps/Creep/: Application.cpp  CMakeLists.txt  Creep.pro
src/apps/Funkytown/: Application.cpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  Cookie.cpp  Cookie.hpp  CookieJar.cpp  CookieJar.hpp  DownloadHandler.cpp  DownloadHandler.hpp  Funkytown.pro  FunkytownApplication.cpp  FunkytownConfigDialog.cpp  FunkytownConfigDialog.hpp  FunkytownMainWidget.cpp  FunkytownMainWidget.hpp  MagicQueue.cpp  MagicQueue.hpp  MainWidget.cpp  MainWidget.hpp  TheMagic.cpp  TheMagic.hpp
src/apps/Innuendo/: Application.cpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  ConfigNotifyApplicationWidget.cpp  ConfigNotifyApplicationWidget.hpp  ConfigNotifyWidget.cpp  ConfigNotifyWidget.hpp  DropDialog.cpp  DropDialog.hpp  ExecButton.cpp  ExecButton.hpp  Innuendo.pro  InnuendoApplication.cpp  InnuendoConfigDialog.cpp  InnuendoConfigDialog.hpp  InnuendoMainWidget.cpp  InnuendoMainWidget.hpp  LogListWidget.cpp  LogListWidget.hpp  MainWidget.cpp  MainWidget.hpp  SatelliteConfigWidget.cpp  SatelliteConfigWidget.hpp
src/apps/Karmadrome/: Application.cpp  ButtonsWidget.cpp  ButtonsWidget.hpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  ExportFolder.cpp  ExportFolder.hpp  ExportFolderList.cpp  ExportFolderList.hpp  ExportGroup.cpp  ExportGroup.hpp  ExportGroupList.cpp  ExportGroupList.hpp  ImportExport.cpp  ImportExport.hpp  ImportFolder.cpp  ImportFolder.hpp  ImportGroup.cpp  ImportGroup.hpp  Karmadrome.pro  KarmadromeApplication.cpp  KarmadromeConfigDialog.cpp  KarmadromeConfigDialog.hpp  KarmadromeMainWidget.cpp  KarmadromeMainWidget.hpp  MainWidget.cpp  MainWidget.hpp
src/apps/Notorious/: Application.cpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  Foundlist.cpp  Foundlist.hpp  FreeDB.cpp  FreeDB.hpp  FreeDBEntry.cpp  FreeDBEntry.hpp  FreeDBImport.cpp  FreeDBImport.hpp  FreeDBQuery.cpp  FreeDBQuery.hpp  MainWidget.cpp  MainWidget.hpp  Notorious.pro  NotoriousApplication.cpp  NotoriousConfigDialog.cpp  NotoriousConfigDialog.hpp  NotoriousMainWidget.cpp  NotoriousMainWidget.hpp  SearchWidget.cpp  SearchWidget.hpp  TarEntry.cpp  TarEntry.hpp  tir.c  tir.h
src/apps/Partyman/: Application.cpp  CMakeLists.txt  CommandLineHandler.cpp  CommandLineHandler.hpp  ConfigDialog.cpp  ConfigDialog.hpp  ControlWidget.cpp  ControlWidget.hpp  FileSysTreeItem.cpp  FileSysTreeItem.hpp  FileSysTreeModel.cpp  FileSysTreeModel.hpp  FileSysTreeUpdate.cpp  FileSysTreeUpdate.hpp  FileSysTreeView.cpp  FileSysTreeView.hpp  MainWidget.cpp  MainWidget.hpp  MyMouseEvent.hpp  Partyman.pro  PartymanApplication.cpp  PartymanConfigDialog.cpp  PartymanConfigDialog.hpp  PartymanMainWidget.cpp  PartymanMainWidget.hpp  PartymanMainWindow.cpp  PartymanMainWindow.hpp  PlayerFSM.cpp  PlayerFSM.hpp  PlayerFSMBase.cpp  PlayerFSMBase.hpp  PlayerFSMDisconnected.cpp  PlayerFSMDisconnected.hpp  PlayerFSMEnding.cpp  PlayerFSMEnding.hpp  PlayerFSMEndingPaused.cpp  PlayerFSMEndingPaused.hpp  PlayerFSMLoading.cpp  PlayerFSMLoading.hpp  PlayerFSMPaused.cpp  (+25 more)
src/apps/Rubberbandman/: Application.cpp  BrowseWidget.cpp  BrowseWidget.hpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  Console.cpp  Console.hpp  DatabaseWidget.cpp  DatabaseWidget.hpp  DatabaseWorker.cpp  DatabaseWorker.hpp  DirWalkerDelete.cpp  DirWalkerDelete.hpp  DirWalkerMove.cpp  DirWalkerMove.hpp  DirWalkerUpdate.cpp  DirWalkerUpdate.hpp  FileSysBrowser.cpp  FileSysBrowser.hpp  InfoEdit.cpp  InfoEdit.hpp  LineEdit.cpp  LineEdit.hpp  MainWidget.cpp  MainWidget.hpp  MyTreeView.cpp  MyTreeView.hpp  RecurseWorker.cpp  RecurseWorker.hpp  Rubberbandman.pro  RubberbandmanApplication.cpp  RubberbandmanCommandLine.cpp  RubberbandmanCommandLine.hpp  RubberbandmanConfigDialog.cpp  RubberbandmanConfigDialog.hpp  RubberbandmanMainWidget.cpp  RubberbandmanMainWidget.hpp  SLARTComWidget.cpp  SLARTComWidget.hpp  (+6 more)
src/apps/Sorcerer/: Application.cpp  CMakeLists.txt  Interface.hpp  MainWidget.cpp  MainWidget.hpp  Plugin.cpp  Plugin.hpp  Sorcerer.pro  SorcererApplication.cpp  SorcererMainWidget.cpp  SorcererMainWidget.hpp  SorcererWidget.cpp  SorcererWidget.hpp
src/apps/Stripped/: Application.cpp  CDDB.cpp  CDDB.hpp  CDDBClient.cpp  CDDBClient.hpp  CDEdit.cpp  CDEdit.hpp  CDEditCheckBox.cpp  CDEditCheckBox.hpp  CDEditLineEdit.cpp  CDEditLineEdit.hpp  CDInfo.cpp  CDInfo.hpp  CDReader.cpp  CDReader.hpp  CDReaderThread.cpp  CDReaderThread.hpp  CDToc.cpp  CDToc.hpp  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.hpp  Encoder.cpp  Encoder.hpp  FlacEncoder.cpp  FlacEncoder.hpp  MainWidget.cpp  MainWidget.hpp  Mp3Encoder.cpp  Mp3Encoder.hpp  OggEncoder.cpp  OggEncoder.hpp  ParanoiaStatus.cpp  ParanoiaStatus.hpp  Stripped.pro  StrippedApplication.cpp  StrippedConfigDialog.cpp  StrippedConfigDialog.hpp  StrippedMainWidget.cpp  StrippedMainWidget.hpp  (+4 more)
src/apps/Underpass/: CMakeLists.txt  StationStorage.cpp  StationStorage.hpp  Underpass.pro  UnderpassApplication.cpp  UnderpassConfigDialog.cpp  UnderpassConfigDialog.hpp  UnderpassMainWidget.cpp  UnderpassMainWidget.hpp
src/cmake/: FindLame.cmake  LocalLibrary.cmake  LocalTools.cmake  SetVersion.cmake  SourceHelper.cmake
src/libs/: CMakeLists.txt  libs.pro
src/libs/CommandLine/: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  CommandLine.pro  (+6 more)
src/resources/: Funkytown.qrc  Innuendo.qrc  Karmadrome.qrc  Notorious.qrc  Partyman.qrc  Rubberbandman.qrc  Sorcerer.qrc  Stripped.qrc  Underpass.qrc
src/tests/: CMakeLists.txt  tests.pro
src/tools/: CMakeLists.txt  tools.pro
src/translations/: CMakeLists.txt  Common.ts  Common_de.ts  Common_en.ts  Funkytown_de.ts  Innuendo_de.ts  Karmadrome_de.ts  MagicEncoderFlac_de.ts  MagicEncoderMp3_de.ts  MagicEncoderOgg_de.ts  MagicEncoderWav_de.ts  MagicEncoder_de.ts  Notorious_de.ts  Rubberbandman.ts  Rubberbandman_de.ts  Rubberbandman_en.ts  Sorcerer_de.ts
(+716 files in other folders)
