#
# src/apps/CMakeLists.txt
#
# written by SvOlli
# distributed as public domain
#

ADD_SUBDIRECTORY( Creep )
ADD_SUBDIRECTORY( Funkytown )
ADD_SUBDIRECTORY( Innuendo )
ADD_SUBDIRECTORY( Karmadrome )
ADD_SUBDIRECTORY( Notorious )
ADD_SUBDIRECTORY( Partyman )
ADD_SUBDIRECTORY( Rubberbandman )
ADD_SUBDIRECTORY( Sorcerer )
ADD_SUBDIRECTORY( Stripped )
