#
# src/tests/CMakeLists.txt
#
# written by SvOlli
# distributed as public domain
#

ADD_SUBDIRECTORY( TestAppCodeEditor )
ADD_SUBDIRECTORY( TestAppCommandLine )
#ADD_SUBDIRECTORY( TestAppDatabaseBrowser )
ADD_SUBDIRECTORY( TestAppDragAndDrop )
ADD_SUBDIRECTORY( TestAppIconView )
ADD_SUBDIRECTORY( TestAppSatellite )
ADD_SUBDIRECTORY( TestAppWebServer )
ADD_SUBDIRECTORY( TestAppXxtea )
#ADD_SUBDIRECTORY( TestBinary )
